--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,11 @@
     <string name="app_name">App</string>
 
     <string name="title_section0">Dashboard</string>
-    <string name="title_section1">Categories</string>
-    <string name="title_section2">Favourites</string>
-    <string name="title_section3">Search</string>
-    <string name="title_section4">Configuration</string>
+    <string name="title_section1">Girls</string>
+    <string name="title_section2">Categories</string>
+    <string name="title_section3">Favourites</string>
+    <string name="title_section4">Search</string>
+    <string name="title_section5">Configuration</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
